Cool/tests/bad/8-undefined-type-param.cl
class Main inherits IO {
  main() : Object { 
    self.out_string("Hello, world.\n") 
  } ;
  f() : Int {5};
  g(unkno:Init) : Int {6};
} ; 
